// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkerTable EmptyReasons shows reasons when a profile has no non-network markers 1`] = `
<div
  class="EmptyReasons"
>
  <h3>
    The 
    marker table
     is empty for “
    Empty
    ”
  </h3>
  <p>
    This thread contains no markers for this table.
  </p>
</div>
`;

exports[`MarkerTable EmptyReasons shows reasons when all non-network markers have been filtered out 1`] = `
<div
  class="EmptyReasons"
>
  <h3>
    The 
    marker table
     is empty for “
    Empty
    ”
  </h3>
  <p>
    All markers were filtered out by the current selection or search term.
  </p>
</div>
`;

exports[`MarkerTable renders some basic markers and updates when needed 1`] = `
<div
  aria-labelledby="marker-table-tab-button"
  class="markerTable"
  id="marker-table-tab"
  role="tabpanel"
>
  <div
    class="markerSettings"
  >
    <div
      class="markerSettingsSpacer"
    />
    <div
      class="panelSearchField markerSettingsSearchField"
    >
      <label
        class="panelSearchFieldLabel"
      >
        Filter Markers: 
        <form
          class="idleSearchField panelSearchFieldInput"
        >
          <input
            class="idleSearchFieldInput photon-input"
            name="search"
            placeholder="Enter filter terms"
            required=""
            title="Only display markers that match a certain name"
            type="search"
            value=""
          />
          <input
            class="idleSearchFieldButton"
            tabindex="-1"
            type="reset"
          />
        </form>
        <div
          class="panelSearchFieldIntroduction isHidden"
        >
          Did you know you can use the comma (,) to search using several terms?
        </div>
      </label>
    </div>
  </div>
  <div
    class="treeView"
  >
    <div
      class="treeViewHeader"
    >
      <span
        class="treeViewHeaderColumn treeViewFixedColumn start"
        style="width: 90px;"
      >
        Start
      </span>
      <span
        class="treeViewColumnDivider"
        column="start"
        columnindex="0"
        resize="true"
      >
        <span />
      </span>
      <span
        class="treeViewHeaderColumn treeViewFixedColumn duration"
        style="width: 80px;"
      >
        Duration
      </span>
      <span
        class="treeViewColumnDivider"
        column="duration"
        columnindex="1"
        resize="true"
      >
        <span />
      </span>
      <span
        class="treeViewHeaderColumn treeViewFixedColumn type"
        style="width: 150px;"
      >
        Type
      </span>
      <span
        class="treeViewColumnDivider"
        column="type"
        columnindex="2"
        resize="true"
      >
        <span />
      </span>
      <span
        class="treeViewHeaderColumn treeViewMainColumn name"
      >
        Description
      </span>
    </div>
    <div
      class="react-contextmenu-wrapper treeViewContextMenu"
    >
      <div
        aria-label="Call tree"
        class="treeViewBody"
        role="tree"
        tabindex="0"
      >
        <div
          class="treeViewBodyInnerWrapper"
        >
          <div
            class="treeViewBodyInner treeViewBodyInner0"
            style="height: 128px;"
          >
            <div
              class="treeViewBodyInner treeViewBodyInner0TopSpacer"
              style="height: 0px;"
            />
            <div
              class="treeViewBodyInner treeViewBodyInner0InnerChunk"
            >
              <div
                class="treeViewRow treeViewRowFixedColumns even"
                style="height: 16px; line-height: 16px;"
              >
                <span
                  class="treeViewRowColumn treeViewFixedColumn start"
                  style="width: 90px;"
                  title="0.000s"
                >
                  0.000s
                </span>
                <span
                  class="treeViewColumnDivider"
                  column="start"
                  columnindex="0"
                  resize="true"
                >
                  <span />
                </span>
                <span
                  class="treeViewRowColumn treeViewFixedColumn duration"
                  style="width: 80px;"
                  title="0s"
                >
                  0s
                </span>
                <span
                  class="treeViewColumnDivider"
                  column="duration"
                  columnindex="1"
                  resize="true"
                >
                  <span />
                </span>
                <span
                  class="treeViewRowColumn treeViewFixedColumn type"
                  style="width: 150px;"
                  title="UserTiming"
                >
                  UserTiming
                </span>
                <span
                  class="treeViewColumnDivider"
                  column="type"
                  columnindex="2"
                  resize="true"
                >
                  <span />
                </span>
              </div>
              <div
                class="treeViewRow treeViewRowFixedColumns odd"
                style="height: 16px; line-height: 16px;"
              >
                <span
                  class="treeViewRowColumn treeViewFixedColumn start"
                  style="width: 90px;"
                  title="0.002s"
                >
                  0.002s
                </span>
                <span
                  class="treeViewColumnDivider"
                  column="start"
                  columnindex="0"
                  resize="true"
                >
                  <span />
                </span>
                <span
                  class="treeViewRowColumn treeViewFixedColumn duration"
                  style="width: 80px;"
                  title=""
                />
                <span
                  class="treeViewColumnDivider"
                  column="duration"
                  columnindex="1"
                  resize="true"
                >
                  <span />
                </span>
                <span
                  class="treeViewRowColumn treeViewFixedColumn type"
                  style="width: 150px;"
                  title="Paint"
                >
                  Paint
                </span>
                <span
                  class="treeViewColumnDivider"
                  column="type"
                  columnindex="2"
                  resize="true"
                >
                  <span />
                </span>
              </div>
              <div
                class="treeViewRow treeViewRowFixedColumns even"
                style="height: 16px; line-height: 16px;"
              >
                <span
                  class="treeViewRowColumn treeViewFixedColumn start"
                  style="width: 90px;"
                  title="0.108s"
                >
                  0.108s
                </span>
                <span
                  class="treeViewColumnDivider"
                  column="start"
                  columnindex="0"
                  resize="true"
                >
                  <span />
                </span>
                <span
                  class="treeViewRowColumn treeViewFixedColumn duration"
                  style="width: 80px;"
                  title="unknown"
                >
                  unknown
                </span>
                <span
                  class="treeViewColumnDivider"
                  column="duration"
                  columnindex="1"
                  resize="true"
                >
                  <span />
                </span>
                <span
                  class="treeViewRowColumn treeViewFixedColumn type"
                  style="width: 150px;"
                  title="IPC"
                >
                  IPC
                </span>
                <span
                  class="treeViewColumnDivider"
                  column="type"
                  columnindex="2"
                  resize="true"
                >
                  <span />
                </span>
              </div>
              <div
                class="treeViewRow treeViewRowFixedColumns odd"
                style="height: 16px; line-height: 16px;"
              >
                <span
                  class="treeViewRowColumn treeViewFixedColumn start"
                  style="width: 90px;"
                  title="0.153s"
                >
                  0.153s
                </span>
                <span
                  class="treeViewColumnDivider"
                  column="start"
                  columnindex="0"
                  resize="true"
                >
                  <span />
                </span>
                <span
                  class="treeViewRowColumn treeViewFixedColumn duration"
                  style="width: 80px;"
                  title="584.00ns"
                >
                  584.00ns
                </span>
                <span
                  class="treeViewColumnDivider"
                  column="duration"
                  columnindex="1"
                  resize="true"
                >
                  <span />
                </span>
                <span
                  class="treeViewRowColumn treeViewFixedColumn type"
                  style="width: 150px;"
                  title="Text"
                >
                  Text
                </span>
                <span
                  class="treeViewColumnDivider"
                  column="type"
                  columnindex="2"
                  resize="true"
                >
                  <span />
                </span>
              </div>
              <div
                class="treeViewRow treeViewRowFixedColumns even"
                style="height: 16px; line-height: 16px;"
              >
                <span
                  class="treeViewRowColumn treeViewFixedColumn start"
                  style="width: 90px;"
                  title="0.153s"
                >
                  0.153s
                </span>
                <span
                  class="treeViewColumnDivider"
                  column="start"
                  columnindex="0"
                  resize="true"
                >
                  <span />
                </span>
                <span
                  class="treeViewRowColumn treeViewFixedColumn duration"
                  style="width: 80px;"
                  title="584.00ns"
                >
                  584.00ns
                </span>
                <span
                  class="treeViewColumnDivider"
                  column="duration"
                  columnindex="1"
                  resize="true"
                >
                  <span />
                </span>
                <span
                  class="treeViewRowColumn treeViewFixedColumn type"
                  style="width: 150px;"
                  title="Text"
                >
                  Text
                </span>
                <span
                  class="treeViewColumnDivider"
                  column="type"
                  columnindex="2"
                  resize="true"
                >
                  <span />
                </span>
              </div>
              <div
                class="treeViewRow treeViewRowFixedColumns odd"
                style="height: 16px; line-height: 16px;"
              >
                <span
                  class="treeViewRowColumn treeViewFixedColumn start"
                  style="width: 90px;"
                  title="0.158s"
                >
                  0.158s
                </span>
                <span
                  class="treeViewColumnDivider"
                  column="start"
                  columnindex="0"
                  resize="true"
                >
                  <span />
                </span>
                <span
                  class="treeViewRowColumn treeViewFixedColumn duration"
                  style="width: 80px;"
                  title=""
                />
                <span
                  class="treeViewColumnDivider"
                  column="duration"
                  columnindex="1"
                  resize="true"
                >
                  <span />
                </span>
                <span
                  class="treeViewRowColumn treeViewFixedColumn type"
                  style="width: 150px;"
                  title="Log"
                >
                  Log
                </span>
                <span
                  class="treeViewColumnDivider"
                  column="type"
                  columnindex="2"
                  resize="true"
                >
                  <span />
                </span>
              </div>
              <div
                class="treeViewRow treeViewRowFixedColumns even"
                style="height: 16px; line-height: 16px;"
              >
                <span
                  class="treeViewRowColumn treeViewFixedColumn start"
                  style="width: 90px;"
                  title="0.162s"
                >
                  0.162s
                </span>
                <span
                  class="treeViewColumnDivider"
                  column="start"
                  columnindex="0"
                  resize="true"
                >
                  <span />
                </span>
                <span
                  class="treeViewRowColumn treeViewFixedColumn duration"
                  style="width: 80px;"
                  title="1ms"
                >
                  1ms
                </span>
                <span
                  class="treeViewColumnDivider"
                  column="duration"
                  columnindex="1"
                  resize="true"
                >
                  <span />
                </span>
                <span
                  class="treeViewRowColumn treeViewFixedColumn type"
                  style="width: 150px;"
                  title="FileIO"
                >
                  FileIO
                </span>
                <span
                  class="treeViewColumnDivider"
                  column="type"
                  columnindex="2"
                  resize="true"
                >
                  <span />
                </span>
              </div>
            </div>
          </div>
          <div
            class="treeViewBodyInner treeViewBodyInner1"
            style="height: 128px; min-width: 3000px;"
          >
            <div
              class="treeViewBodyInner treeViewBodyInner1TopSpacer"
              style="height: 0px;"
            />
            <div
              class="treeViewBodyInner treeViewBodyInner1InnerChunk"
            >
              <div
                aria-level="1"
                aria-selected="false"
                class="treeViewRow treeViewRowScrolledColumns even"
                id="treeViewRow-0"
                role="treeitem"
                style="height: 16px; line-height: 16px;"
              >
                <span
                  class="treeRowIndentSpacer"
                  style="width: 0px;"
                />
                <span
                  class="treeRowToggleButton collapsed leaf"
                />
                <span
                  class="treeViewRowColumn treeViewMainColumn name"
                >
                  foobar
                </span>
              </div>
              <div
                aria-level="1"
                aria-selected="false"
                class="treeViewRow treeViewRowScrolledColumns odd"
                id="treeViewRow-1"
                role="treeitem"
                style="height: 16px; line-height: 16px;"
              >
                <span
                  class="treeRowIndentSpacer"
                  style="width: 0px;"
                />
                <span
                  class="treeRowToggleButton collapsed leaf"
                />
                <span
                  class="treeViewRowColumn treeViewMainColumn name"
                >
                  NotifyDidPaint
                </span>
              </div>
              <div
                aria-level="1"
                aria-selected="false"
                class="treeViewRow treeViewRowScrolledColumns even"
                id="treeViewRow-2"
                role="treeitem"
                style="height: 16px; line-height: 16px;"
              >
                <span
                  class="treeRowIndentSpacer"
                  style="width: 0px;"
                />
                <span
                  class="treeRowToggleButton collapsed leaf"
                />
                <span
                  class="treeViewRowColumn treeViewMainColumn name"
                >
                  IPCOut — PContent::Msg_PreferenceUpdate — sent to 2222
                </span>
              </div>
              <div
                aria-level="1"
                aria-selected="false"
                class="treeViewRow treeViewRowScrolledColumns odd"
                id="treeViewRow-3"
                role="treeitem"
                style="height: 16px; line-height: 16px;"
              >
                <span
                  class="treeRowIndentSpacer"
                  style="width: 0px;"
                />
                <span
                  class="treeRowToggleButton collapsed leaf"
                />
                <span
                  class="treeViewRowColumn treeViewMainColumn name"
                >
                  setTimeout — 5.5
                </span>
              </div>
              <div
                aria-level="1"
                aria-selected="false"
                class="treeViewRow treeViewRowScrolledColumns even"
                id="treeViewRow-4"
                role="treeitem"
                style="height: 16px; line-height: 16px;"
              >
                <span
                  class="treeRowIndentSpacer"
                  style="width: 0px;"
                />
                <span
                  class="treeRowToggleButton collapsed leaf"
                />
                <span
                  class="treeViewRowColumn treeViewMainColumn name"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget magna sed magna vehicula congue id id nulla. Ut convallis, neque consequat aliquam egestas, dui urna interdum quam, id semper magna erat et nisi. Vivamus molestie quis ligula eget aliquam. Sed facilisis, turpis sed facilisis posuere, risus odio convallis velit, vitae vehicula justo risus at ipsum. Proin non porttitor neque. Vivamus fringilla ex nec iaculis cursus. Vestibulum suscipit mauris sem, vitae gravida ipsum fermentum id. Q…
                </span>
              </div>
              <div
                aria-level="1"
                aria-selected="false"
                class="treeViewRow treeViewRowScrolledColumns odd"
                id="treeViewRow-5"
                role="treeitem"
                style="height: 16px; line-height: 16px;"
              >
                <span
                  class="treeRowIndentSpacer"
                  style="width: 0px;"
                />
                <span
                  class="treeRowToggleButton collapsed leaf"
                />
                <span
                  class="treeViewRowColumn treeViewMainColumn name"
                >
                  (nsJarProtocol) nsJARChannel::nsJARChannel [this=0x87f1ec80]

                </span>
              </div>
              <div
                aria-level="1"
                aria-selected="false"
                class="treeViewRow treeViewRowScrolledColumns even"
                id="treeViewRow-6"
                role="treeitem"
                style="height: 16px; line-height: 16px;"
              >
                <span
                  class="treeRowIndentSpacer"
                  style="width: 0px;"
                />
                <span
                  class="treeRowToggleButton collapsed leaf"
                />
                <span
                  class="treeViewRowColumn treeViewMainColumn name"
                >
                  (PoisonIOInterposer) create/open — /foo/bar
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
